terraform/helm/ingress/platform-dev.yaml
apiVersion: traefik.containo.us/v1alpha1      
kind: IngressRoute      
metadata:
  annotations:  
  name: platform-dev    
spec:    
  routes:
  - kind: Rule  
    match: Host(`platform-dev.pennlabs.org`) && PathPrefix(`/`)
    services:   
    - kind: Service
      name: platform-dev
      namespace: default
      port: 8080
  tls:
    domains:
    - main: pennlabs.org
    secretName: pennlabs-org-tls
